[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "catalyst-mcp-cache"
version = "0.2.0"
description = "MCP progressive-discovery and deferred-result adapter powered by the closed-source catalyst-brain SDK."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [{ name = "Strategic Innovations AI", email = "hello@strategic-innovations.ai" }]
dependencies = ["catalyst-brain>=1.3.3,<2"]
keywords = ["mcp", "tool-calling", "agent-cache", "token-efficiency", "catalyst-brain"]

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.urls]
Homepage = "https://github.com/CrewRiz/catalyst-mcp-cache"
Commercial = "https://strategic-innovations.ai"

[project.scripts]
catalyst-mcp-cache-smoke = "catalyst_mcp_cache.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
